[package]
name = "witter-backend"
version = "0.1.0"
authors = ["Norbert Gajda <norbert.gajda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.2", features = ["attributes", "unstable"]}
tide = "0.11.0"
sqlx = {version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.12"
log = "0.4.8"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
uuid = "0.8.1"
thiserror = "1.0.20"